fixed width
kept a fixed with of 1400px to avoid overlapping

--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  min-width: 1400px;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
